# vaulytica

./: .dockerignore  .env.example  .eslintrc.cjs  .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  .secrets.enc  BUILD_PROGRESS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Dockerfile.scan-runner  LAUNCH.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TESTING_REPORT.md  V3.md  action.yml  config.example.yaml  coverage.json  dkb-shrinkage-ack.yml  dkb-staleness-ack.yml  dlp_rules.example.yaml  docker-compose.yml  eslint.config.js  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  prometheus.yml  pyproject.toml  pytest.ini  quick_test.sh  requirements-dev.txt  requirements-production.txt  (+27 more)
.claude/: settings.json
chroma_db/: chroma.sqlite3
config/: README.md  development.yaml  production.yaml  staging.yaml
corpus/: CHANGELOG.md  CORPUS_VERSION  README.md  manifest.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CHROME_ENTERPRISE.md  CLI_USAGE_GUIDE.md  CUSTOM_PII_PATTERNS.md  DATABASE_BACKUP_RESTORE.md  DEPLOYMENT.md  GETTING_STARTED.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_GUIDE.md  PRODUCTION_READY_CONFIRMATION.md  QUICKSTART.md  QUICK_REFERENCE.md  ROADMAP.md  SCHEDULER_GUIDE.md  SECURITY.md  SECURITY_POSTURE_FEATURE.md  SHADOW_IT_FEATURE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  V3.md  V4.md  WEBHOOK_GUIDE.md  WEB_APP.md  adding-a-playbook.md  adding-a-rule.md  architecture.md  bundle-splitting.md  ci-integration.md  code-style.md  data-sources.md  deadlines.md  determinism.md  posture-for-attorneys.md  spec-v10.md  spec-v11.md  spec-v12.md  spec-v13.md  spec-v14.md  (+39 more)
examples/: README.md  advanced_ml_demo.py  ai_soc_analytics_demo.py  api_client.py  basic-config.yaml  bulk-create-users.csv  bulk-suspend-users.csv  bulk-users-create.csv  bulk-users-suspend.csv  compliance-focused.yaml  correlation_demo.py  custom-pii-patterns.yaml  dashboard_demo.py  dlp-rules.yaml  education-ferpa-config.yaml  enterprise-config.yaml  financial-services-config.yaml  forensics_demo.py  government-fedramp-config.yaml  healthcare-hipaa-config.yaml  high-security.yaml  incidents_demo.py  metrics_demo.py  ml_demo.py  notification_test.py  playbook_demo.py  small-business-config.yaml  streaming_demo.py  threat_feed_demo.py  visualizations_demo.py  webhook_test.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml.example  service.yaml  serviceaccount.yaml
kubernetes/: autoscaling.yaml
marketing-site/: index.html
marketing_site/: index.html
models/: demo_model.pkl  demo_model_metadata.json
openspec/: config.yaml
outputs/: backdoor_analysis.md  batch_guardduty_report.json  crowdstrike_insider.html  crypto_mining_analysis.json  cryptojacking_advanced.html  cryptojacking_advanced.json  cryptojacking_advanced.md  datadog_exfiltration.html  final_test.html  production_test.html  snowflake_test.html
playbooks/: consulting-agreement.json  employment-at-will-us.json  extended.json  generic-fallback.json  independent-contractor.json  lease-commercial-multitenant.json  lease-residential-us.json  msa-general.json  mutual-nda.json  saas-customer.json  saas-vendor.json  sow.json  unilateral-nda.json
scripts/: setup_check.py
sdk/: README.md  setup.py
shared/: __init__.py  setup.py
site/: index.html  manifest.webmanifest  sw.js  sw.test.ts
src/: index.ts
test_data/: crowdstrike_insider_threat.json  datadog_data_exfiltration.json  gcp_scc_privilege_escalation.json  guardduty_backdoor_c2.json  guardduty_crypto_mining.json  guardduty_cryptojacking_advanced.json  guardduty_ransomware.json  guardduty_ssh_bruteforce.json  snowflake_data_exfiltration.json  snowflake_privilege_escalation.json  snowflake_unauthorized_access.json  webhook_guardduty_sns.json
tests/: __init__.py  conftest.py  test_all_parsers.py  test_anomaly_detector.py  test_api_endpoints.py  test_audit_log_scanner.py  test_audit_log_scanner_enhanced.py  test_auth.py  test_backup_manager.py  test_batch_processing.py  test_brand_protection_agent.py  test_cache.py  test_calendar_resource_manager.py  test_calendar_scanner.py  test_chrome_device_scanner.py  test_cli.py  test_cli_validation.py  test_compliance_reporting.py  test_comprehensive.py  test_concurrent.py  test_config.py  test_detection_engineering_agent.py  test_dlp_rules.py  test_edge_cases.py  test_email.py  test_enhanced_security_analyst.py  test_error_handling.py  test_file_scanner.py  test_gmail_security_scanner.py  test_group_scanner.py  test_html_dashboard.py  test_license_scanner.py  test_mobile_device_scanner.py  test_mobile_device_scanner_enhanced.py  test_models.py  test_monitoring.py  test_oauth_scanner_enhanced.py  test_ou_manager.py  test_parsers.py  test_performance.py  (+16 more)
tools/: build-extended-playbooks.ts  generate-icons.ts
vaulytica/: __init__.py  advanced_analytics_dashboard.py  advanced_automation.py  advanced_ml.py  advanced_playbooks.py  advanced_reporting.py  ai_decision_support.py  (+68 more)
web/backend/: Dockerfile  __init__.py  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
web/backend/alembic/: env.py
web/backend/alembic/versions/: 001_initial_schema.py  002_add_multi_tenant_support.py
web/backend/api/: __init__.py  alerts.py  audit.py  auth.py  compliance.py  dashboards.py  delta.py  domains.py  findings.py  scans.py  schedules.py  schemas.py  users.py  websocket.py
web/backend/api/v1/: __init__.py
web/backend/auth/: schemas.py  security.py
web/backend/core/: __init__.py  cache.py  email.py  logging.py  notifications.py  secrets.py  tenant.py  websocket.py
web/backend/db/: database.py  models.py
web/backend/services/: deduplication.py  scan_runner.py
web/backend/tests/: conftest.py  test_alerts.py  test_audit.py  test_auth.py  test_cache.py  test_compliance.py  test_dashboards.py  test_delta.py  test_domains.py  test_email.py  test_findings.py  test_health.py  test_password_reset.py  test_rbac.py  test_scan_comparison.py  test_scans.py  test_schedules.py  test_users.py  test_websocket.py
(+2091 files in other folders)
