[tool.poetry]
name = "vaulytica"
version = "0.1.0"
description = "AI-powered security event analysis framework with intelligent agents"
authors = ["Vaulytica Team"]
readme = "README.md"
packages = [{include = "vaulytica"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
anthropic = "^0.39.0"
chromadb = "^0.5.0"
rich = "^13.7.0"
structlog = "^24.1.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
ruff = "^0.1.9"

[tool.poetry.scripts]
vaulytica = "vaulytica.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

